client/styles/base/account.css
/* Copyright (C) 2010 Ben Trask

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU Affero General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU Affero General Public License for more details.

You should have received a copy of the GNU Affero General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>. */
#main > .account > .profile {
	padding-top: 2px;
	border-bottom-width: 1px;
}
#main > .account > .profile > .wrap {
	padding: 0 2px;
}
#main > .account > .profile > .wrap > * {
	margin-right: 2px;
	margin-bottom: 2px;
}
#main > .account > .profile > .wrap > .text.brawlName {
	width: 80px;
}
#main > .account > .profile > .wrap > .text.friendCode {
	width: 140px;
}
#main > .account > .profile > .wrap > .style {
	width: 150px;
}
#main > .account > .profile > .wrap > .sound {
	width: 150px;
}
#main > .account > .profile > .wrap > .button {
	width: 90px;
}
#main > .account > .profile > .bio.wrapper {
	height: 25px;
	margin: 0 2px 2px 2px;
}

#main > .account > .channels > .channel + .channel {
	border-top-width: 1px;
}

